--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Medical testing</title>
+<title>Daawo Holdings Limited | Construction And Supplies</title>
 <link href="css/new-daawo.css" rel="stylesheet" type="text/css" />
 <link href="css/skippr.css" rel="stylesheet" type="text/css" />
 <link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
